k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: three-s
---
apiVersion: v1
kind: Namespace
metadata:
  name: elastic
